#2294: parse WhatsApp user account for Android using 'registration.RegisterPhone.xml' file