@@ -12,13 +12,20 @@ import javax.xml.xpath.XPathConstants;
 import javax.xml.xpath.XPathExpression;
 import javax.xml.xpath.XPathFactory;
 
+import org.apache.commons.lang3.StringUtils;
+import org.apache.tika.exception.TikaException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
+import org.xml.sax.SAXException;
 
 import com.dd.plist.NSDictionary;
 import com.dd.plist.NSObject;
 import com.dd.plist.PropertyListParser;
 
 public class WAAccount extends WAContact {
+
+    private static final Logger logger = LoggerFactory.getLogger(WAAccount.class);
 
     private boolean isUnknown = false;
 
@@ -30,40 +37,59 @@ public class WAAccount extends WAContact {
         return "WhatsApp Account: " + getName(); //$NON-NLS-1$
     }
 
-    public static WAAccount getFromAndroidXml(InputStream is) {
+    public static WAAccount getFromAndroidXml(InputStream is) throws SAXException, IOException, TikaException {
         try {
             DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
             DocumentBuilder builder = factory.newDocumentBuilder();
             Document doc = builder.parse(is);
 
+            WAAccount account;
+
             XPath xpath = XPathFactory.newInstance().newXPath();
-            XPathExpression expr = xpath.compile("/map/string[@name=\"registration_jid\"]");
+
+            XPathExpression expr = xpath.compile("/map/string[@name=\"com.whatsapp.registration.RegisterPhone.phone_number\"]");
             String value = (String) expr.evaluate(doc, XPathConstants.STRING);
-            if (value == null || value.isBlank()) {
-                expr = xpath.compile("/map/string[@name=\"ph\"]");
+            if (StringUtils.isNotBlank(value)) {
+                String phoneNumber = value;
+
+                expr = xpath.compile("/map/string[@name=\"com.whatsapp.registration.RegisterPhone.country_code\"]");
                 value = (String) expr.evaluate(doc, XPathConstants.STRING);
-                if (value == null || value.isBlank())
+                if (StringUtils.isBlank(value)) {
                     return null;
+                }
+                String countryCode = value;
+
+                account = new WAAccount(countryCode + phoneNumber + waSuffix);
+
+            } else {
+
+                expr = xpath.compile("/map/string[@name=\"registration_jid\"]");
+                value = (String) expr.evaluate(doc, XPathConstants.STRING);
+                if (StringUtils.isBlank(value)) {
+                    expr = xpath.compile("/map/string[@name=\"ph\"]");
+                    value = (String) expr.evaluate(doc, XPathConstants.STRING);
+                    if (StringUtils.isBlank(value))
+                        return null;
+                }
+                if (!value.endsWith(waSuffix))
+                    value += waSuffix;
+
+                account = new WAAccount(value);
+
+                expr = xpath.compile("/map/string[@name=\"push_name\"]");
+                value = (String) expr.evaluate(doc, XPathConstants.STRING);
+                if (value != null && !value.isBlank())
+                    account.setWaName(value);
+
+                expr = xpath.compile("/map/string[@name=\"my_current_status\"]");
+                value = (String) expr.evaluate(doc, XPathConstants.STRING);
+                if (value != null && !value.isBlank())
+                    account.setStatus(value);
             }
-            if (!value.endsWith(waSuffix))
-                value += waSuffix;
-
-            WAAccount account = new WAAccount(value);
-
-            expr = xpath.compile("/map/string[@name=\"push_name\"]");
-            value = (String) expr.evaluate(doc, XPathConstants.STRING);
-            if (value != null && !value.isBlank())
-                account.setWaName(value);
-
-            expr = xpath.compile("/map/string[@name=\"my_current_status\"]");
-            value = (String) expr.evaluate(doc, XPathConstants.STRING);
-            if (value != null && !value.isBlank())
-                account.setStatus(value);
-
             return account;
 
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.warn("Error parsing WhatsApp account xml for Android: {}", e);
             return null;
         }
     }
